--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-theme-tokiwa"]
-	path = themes/hugo-theme-tokiwa
+[submodule "themes/tokiwa"]
+	path = themes/tokiwa
 	url = git@github.com:heyeshuang/hugo-theme-tokiwa.git
