--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "themes/tokiwa"]
 	path = themes/tokiwa
 	url = git@github.com:heyeshuang/hugo-theme-tokiwa.git
+[submodule "themes/ink"]
+	path = themes/ink
+	url = git@github.com:knadh/hugo-ink.git
+[submodule "themes/friend"]
+	path = themes/friend
+	url = git@github.com:rhazdon/hugo-theme-hello-friend-ng.git
+[submodule "themes/codex"]
+	path = themes/codex
+	url = git@github.com:jakewies/hugo-theme-codex.git
