--- a/config.toml
+++ b/config.toml
@@ -52,6 +52,6 @@ mail = "mailto:harishnavnit@gmail.com"
 linkedin = "https://www.linkedin.com/in/tinvaan"
 github = "https://github.com/tinvaan"
 twitter = "https://twitter.com/tinvaan"
-instagram = "https://instagram.com/tinvaan"
-facebook = "https://facebook.com/tinvaan"
+# instagram = "https://instagram.com/tinvaan"
+# facebook = "https://facebook.com/tinvaan"
 youtube = "https://www.youtube.com/channel/UC-Sa7r3x7Z4z947QTz0DYLg"
