--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ copyright = "Copyright © 2022"
 enableEmoji = true
 enableInlineShortcodes = true
 footnoteReturnLinkContents = "^"
-theme = "tokiwa"
+theme = "paper"
 
 [params]
 description = """
