--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/tokiwa"]
-	path = themes/tokiwa
-	url = git@github.com:heyeshuang/hugo-theme-tokiwa.git
 [submodule "themes/ink"]
 	path = themes/ink
 	url = git@github.com:knadh/hugo-ink.git
@@ -10,3 +7,6 @@
 [submodule "themes/codex"]
 	path = themes/codex
 	url = git@github.com:jakewies/hugo-theme-codex.git
+[submodule "themes/tokiwa"]
+	path = themes/tokiwa
+	url = https://github.com/heyeshuang/hugo-theme-tokiwa.git
