--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://tinvaan.me/"
+baseURL = "https://tinvaan.github.io/"
 languageCode = "en-us"
 title = "Harish Navnit"
 copyright = "Copyright © 2025"
